2009-11-29  Markus Gutschke  <markus@shellinabox.com>

	* Preparations for packaging ShellInABox in a way that makes it
	easy for Debian package maintainers to pick it up.

2009-11-25  Markus Gutschke  <markus@shellinabox.com>

	* On browsers that support CSS transforms, enable switching between
	  80 and 132 column mode.

2009-11-21  Markus Gutschke  <markus@shellinabox.com>

	* Updated manual page documenting --user-css

	* Released version 2.10

2009-11-18  Markus Gutschke  <markus@shellinabox.com>

	* Fixed some compiler warnings when using more recent versions of
	gcc and glibc.

	* Tweak the handling of CTRL keys, so that some of the more unusual
	combinations work. For historic reasons, there is an expectation that
	CTRL-3..CTRL-8 return specific control characters. Also fixed the
	handling of CTRL-\ which could cause problems with some browsers.

	* Rely on the browser for capitalization. This should fix Capslock
	behavior. Hopefully, it won't break any other keyboard features or
	layouts.

2009-08-20  Markus Gutschke  <markus@shellinabox.com>

	* Added transparent printing support. The development of this
	feature is sponsored by De Bortoli Wines Pty Limited and by
	Eternity Technologies.

2009-08-19  Markus Gutschke  <markus@shellinabox.com>

	* Added a ${url} parameter that can be used in the service description.

2009-08-11  Markus Gutschke  <markus@shellinabox.com>

	* Added support for user selectable style sheets. Included example
	style sheets that allow switching to white-on-black or to monochrome
	mode from the right click context menu.

	* Fixed the "|" key on Swedish keyboards.

2009-07-30  Markus Gutschke  <markus@shellinabox.com>

	* Added the --css command line option to make incremental changes
	to the style sheet without having to load a full replacement with
	the --static-file option. Added an example that enables white text
	on a black background.

	* Added Debian specific documentation to the manual page.
